@@ -7,6 +7,8 @@
       accessor on the parent Selectable so theres no need to be aware
       of the genrerated label names [ticket:512].
     - preliminary support for unicode table and column names added.
+    - fix for fetchmany() "size" argument being positional in most
+      dbapis [ticket:505]
 - orm:
     - improved/fixed custom collection classes when giving it "set"/
       "sets.Set" classes or subclasses (was still looking for append()
